# basketball_reference_scraper

./: pyproject.toml  requirements.txt
src/basketball_reference_scraper/: __init__.py
