[tool.poetry]
name = "basketball_reference_scraper"
version = "0.1.0"
description = ""
authors = ["Mason Wrolstad <mason@surge.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "1.3.0"
lxml = "4.9.2"
requests = "2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
